IV Development History

Version 0.0.4 (June 30, 2010)
================================

 * Added ingrained default configuration
 * Improved interface messages
   - Greater consistency, not greater readbility
 * Got rid of directory-open crash bug 
 * Added multibuffer support
 * Added cut/copy/paste support
 * Added goto-line command
 * Added open-file command


Version 0.0.3 (June 25, 2010)
================================

 * Improved documentation
 * Fixed bugs in keymap configuration.
 * Restored old functionality from v0.0.1


================================

Version 0.0.2 (June 21, 2010)

 * Improved build system
 * Test suite infrastructure
 * Improved error handling
 * Added keymap configuration
 * Display splash screen on startup
 * Scroll the screen only one line at a time (rather than a screen)
 * Added src/ directory
 * Added manpage
 * Text addition mode now triggered by spacebar
 * Eradicated (most) memory leaks


================================

Version 0.0.1 (June 12, 2010)

 * Basic editing ability, without tabs
 * First release
