@@ -10,3 +10,4 @@ iv
 src/keys.c
 doc/iv.1
 tests/iv-tests
+doc/README.html
